<resources>
    <string name="app_name">ArenaX</string>
    <string name="default_web_client_id">258797999918-7e31ift32pefnc518bl6o6e6427pbv8s.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="title_activity_organization_home_page">organizationHomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_Dashboard">Dashboard</string>
    <string name="menu_PagePosts">Page Posts</string>
    <string name="menu_editPage">Edit Page</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_jobs">Job Postings</string>
    <string name="menu_sponsoredPosts">Sponsored Posts</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_inbox">Inbox</string>
    <string name="title_activity_esports_profile">esportsProfile</string>

    <string name="menu_profile">My Profile</string>
    <string name="menu_organizations">My Organization(s)</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_team">My Team(s)</string>
    <string name="menu_organizationTeams">Roster(s)</string>
    <string name="menu_findTeam">Looking For a Team</string>
    <string name="menu_manageEvents">Manage Events</string>
    <string name="menu_manageApplications">Manage Applications &amp; Invites</string>
</resources>